<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_open_delay_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_open_delay_time"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_open_delay_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edit_open_delay_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/text_open_delay_time"
        android:hint="@string/text_open_delay_time"
        android:inputType="number"
        android:text="@string/default_open_delay_time"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/text_loading_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_open_delay_time" />

    <TextView
        android:id="@+id/text_loading_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_loading_time"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_loading_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_open_delay_time" />

    <EditText
        android:id="@+id/edit_loading_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/text_open_delay_time"
        android:hint="@string/text_open_delay_time"
        android:inputType="number"
        android:text="@string/default_loading_time"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_config"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_loading_time" />

    <Button
        android:id="@+id/button_config"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:paddingLeft="24dp"
        android:paddingTop="20dp"
        android:paddingRight="24dp"
        android:paddingBottom="20dp"
        android:text="@string/text_button_config"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_loading_time" />

</android.support.constraint.ConstraintLayout>
